@@ -21,17 +21,21 @@ import kotlin.text.Charsets.UTF_8
 
 // Note: the plugins block is evaluated before the script itself, so no variables can be used
 plugins {
+    id("com.gradle.build-scan") version "2.1"
     kotlin("jvm") version "1.3.0"
     application
     id("com.github.ben-manes.versions") version "0.20.0"
     id("de.undercouch.download") version "3.4.3"
 }
 
-fun Boolean.orFailIO(message: () -> String) = also { if (!this) throw IOException(message()) }
+buildScan {
+    termsOfServiceUrl = "https://gradle.com/terms-of-service"
+    setTermsOfServiceAgree("yes")
+}
 
 /** working directory of the application */
 val dirWorking = file("working dir")
-val dirJdk = dirWorking.resolve("java")
+val dirJdk = dirWorking/"java"
 val kotlinVersion: String by extra {
     buildscript.configurations["classpath"]
             .resolvedConfiguration.firstLevelModuleDependencies
@@ -57,13 +61,9 @@ sourceSets {
     }
 }
 
-kotlin {
-    copyClassesToJavaOutput = true
-}
-
 allprojects {
     apply(plugin = "kotlin")
-    buildDir = file(properties["player.buildDir"] ?: rootDir.resolve("build")).resolve(name)
+    buildDir = file(properties["player.buildDir"] ?: rootDir/"build")/name
 
     tasks.withType<JavaCompile> {
         options.encoding = UTF_8.name()
@@ -72,19 +72,23 @@ allprojects {
         options.isDeprecation = true
         options.compilerArgs = listOf(
                 "-Xlint:unchecked",
-                "--add-exports", "javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED",
-                "--add-exports", "javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED",
-                "--add-exports", "javafx.web/com.sun.webkit=ALL-UNNAMED",
-                "--add-exports", "javafx.graphics/com.sun.glass.ui=ALL-UNNAMED"
+                "--add-exports", "javafx.graphics/com.sun.glass.ui=ALL-UNNAMED",
+                "--add-exports", "javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+                "--add-exports", "javafx.controls/com.sun.javafx.scene.control.skin=ALL-UNNAMED",
+                "--add-exports", "javafx.web/com.sun.webkit=ALL-UNNAMED"
         )
     }
 
     tasks.withType<KotlinCompile> {
+        kotlinOptions.includeRuntime = true
         kotlinOptions.jvmTarget = "1.8"
         kotlinOptions.jdkHome = dirJdk.path
         kotlinOptions.verbose = true
         kotlinOptions.suppressWarnings = false
-        kotlinOptions.freeCompilerArgs += listOf("-progressive", "-Xjvm-default=enable")
+        kotlinOptions.freeCompilerArgs += listOf(
+                "-progressive",
+                "-Xjvm-default=enable"
+        )
     }
 
     repositories {
@@ -96,57 +100,63 @@ allprojects {
 
 dependencies {
 
-    // Kotlin
-    implementation(kotlin("stdlib-jdk8"))
-    implementation(kotlin("reflect"))
+    "Kotlin" requires {
+        implementation(kotlin("stdlib-jdk8"))
+        implementation(kotlin("reflect"))
+        implementation("org.jetbrains.kotlinx", "kotlinx-coroutines-core")
+        implementation("org.jetbrains.kotlinx", "kotlinx-coroutines-javafx", "1.0.1")
+    }
 
-    implementation("org.jetbrains.kotlinx", "kotlinx-coroutines-core")
-    implementation("org.jetbrains.kotlinx", "kotlinx-coroutines-javafx", "1.0.1")
+    "Audio" requires {
+        implementation("uk.co.caprica", "vlcj", "3.10.1")
+        implementation("de.u-mass", "lastfm-java", "0.1.2")
+        implementation("com.github.goxr3plus", "Jaudiotagger", "V2.2.6")
+    }
 
-    // Audio
-    implementation("uk.co.caprica", "vlcj", "3.10.1")
-    implementation("de.u-mass", "lastfm-java", "0.1.2")
-    implementation("com.github.goxr3plus", "Jaudiotagger", "V2.2.6")
+    "JavaFX" requires {
+        implementation("de.jensd", "fontawesomefx", "8.9")
+        implementation("org.reactfx", "reactfx", "2.0-M5")
+        implementation("eu.hansolo", "tilesfx", "1.6.4") { exclude("junit", "junit") }
+        implementation("eu.hansolo", "Medusa", "8.0")
+    }
 
-    // JavaFX
-    implementation("de.jensd", "fontawesomefx", "8.9")
-    implementation("org.reactfx", "reactfx", "2.0-M5")
-    implementation("eu.hansolo", "tilesfx", "1.6.4") { exclude("junit", "junit") }
-    implementation("eu.hansolo", "Medusa", "8.0")
+    "Logging" requires {
+        implementation("org.slf4j", "slf4j-api")
+        implementation("org.slf4j", "jul-to-slf4j", "1.7.25")
+        implementation("ch.qos.logback", "logback-classic", "1.2.3")
+        implementation("io.github.microutils", "kotlin-logging", "1.6.20")
+    }
 
-    // Logging
-    implementation("org.slf4j", "slf4j-api")
-    implementation("org.slf4j", "jul-to-slf4j", "1.7.25")
-    implementation("ch.qos.logback", "logback-classic", "1.2.3")
-    implementation("io.github.microutils", "kotlin-logging", "1.6.20")
+    "Native" requires {
+        implementation("net.java.dev.jna", "jna-platform", "5.0.0")
+        implementation("com.1stleg", "jnativehook", "2.0.2") // don't update this to 2.1.0, it causes a critical error on linux
+    }
 
-    // Native
-    implementation("net.java.dev.jna", "jna-platform", "5.0.0")
-    implementation("com.1stleg", "jnativehook", "2.0.2") // don't update this to 2.1.0, it causes a critical error on linux
+    "Misc" requires {
+        implementation("net.objecthunter", "exp4j", "0.4.8")
+        implementation("org.atteo", "evo-inflector", "1.2.2")
+        implementation("com.thoughtworks.xstream", "xstream", "1.4.11.1")
+    }
 
-    // Misc
-    implementation("net.objecthunter", "exp4j", "0.4.8")
-    implementation("org.atteo", "evo-inflector", "1.2.2")
-    implementation("com.thoughtworks.xstream", "xstream", "1.4.11.1")
-
-    // Image
-    implementation("com.drewnoakes", "metadata-extractor", "2.11.0")
-    val imageioVersion = "3.4.1"
-    implementation("com.twelvemonkeys.imageio", "imageio-bmp", imageioVersion)
-    implementation("com.twelvemonkeys.imageio", "imageio-jpeg", imageioVersion)
-    implementation("com.twelvemonkeys.imageio", "imageio-iff", imageioVersion)
-    implementation("com.twelvemonkeys.imageio", "imageio-icns", imageioVersion)
-    implementation("com.twelvemonkeys.imageio", "imageio-pcx", imageioVersion)
-    implementation("com.twelvemonkeys.imageio", "imageio-pict", imageioVersion)
-    implementation("com.twelvemonkeys.imageio", "imageio-clippath", imageioVersion)
-    implementation("com.twelvemonkeys.imageio", "imageio-hdr", imageioVersion)
-    implementation("com.twelvemonkeys.imageio", "imageio-pdf", imageioVersion)
-    implementation("com.twelvemonkeys.imageio", "imageio-pnm", imageioVersion)
-    implementation("com.twelvemonkeys.imageio", "imageio-psd", imageioVersion)
-    implementation("com.twelvemonkeys.imageio", "imageio-tga", imageioVersion)
-    implementation("com.twelvemonkeys.imageio", "imageio-sgi", imageioVersion)
-    implementation("com.twelvemonkeys.imageio", "imageio-thumbsdb", imageioVersion)
-    implementation("com.twelvemonkeys.imageio", "imageio-tiff", imageioVersion)
+    "Image" requires {
+        implementation("com.drewnoakes", "metadata-extractor", "2.11.0")
+        val imageioVersion = "3.4.1"
+        implementation("com.twelvemonkeys.imageio", "imageio-bmp", imageioVersion)
+        implementation("com.twelvemonkeys.imageio", "imageio-jpeg", imageioVersion)
+        implementation("com.twelvemonkeys.imageio", "imageio-iff", imageioVersion)
+        implementation("com.twelvemonkeys.imageio", "imageio-icns", imageioVersion)
+        implementation("com.twelvemonkeys.imageio", "imageio-pcx", imageioVersion)
+        implementation("com.twelvemonkeys.imageio", "imageio-pict", imageioVersion)
+        implementation("com.twelvemonkeys.imageio", "imageio-clippath", imageioVersion)
+        implementation("com.twelvemonkeys.imageio", "imageio-hdr", imageioVersion)
+        implementation("com.twelvemonkeys.imageio", "imageio-pdf", imageioVersion)
+        implementation("com.twelvemonkeys.imageio", "imageio-pnm", imageioVersion)
+        implementation("com.twelvemonkeys.imageio", "imageio-psd", imageioVersion)
+        implementation("com.twelvemonkeys.imageio", "imageio-tga", imageioVersion)
+        implementation("com.twelvemonkeys.imageio", "imageio-sgi", imageioVersion)
+        implementation("com.twelvemonkeys.imageio", "imageio-thumbsdb", imageioVersion)
+        implementation("com.twelvemonkeys.imageio", "imageio-tiff", imageioVersion)
+    }
 
 }
 
@@ -157,7 +167,7 @@ tasks {
         group = "build"
         description = "Copies all libraries into the working dir"
         from(configurations.compileClasspath)
-        into(dirWorking.resolve("lib"))
+        into(dirWorking/"lib")
     }
 
     val linkJdk by creating {
@@ -166,34 +176,30 @@ tasks {
         onlyIf { !dirJdk.exists() }
         doFirst {
             println("Making JDK locally accessible...")
-            val jdkPath = System.getProperty("java.home").takeIf { it.isNotBlank() }
-                    ?.let { Paths.get(it) }
-                    ?: throw FileNotFoundException("Unable to find JDK")
+            val jdkPath = "java.home".sysProp.takeIf { it.isNotBlank() }?.let { Paths.get(it) } ?: failIO { "Unable to find JDK" }
             try {
                 Files.createSymbolicLink(dirJdk.toPath(), jdkPath)
             } catch (e: Exception) {
                 println("Couldn't create a symbolic link from $dirJdk to $jdkPath: $e")
-                if (System.getProperty("os.name").startsWith("Windows")) {
+                if ("os.name".sysProp.startsWith("Windows")) {
                     println("Trying junction...")
-                    val process = Runtime.getRuntime().exec("cmd.exe /c mklink /j \"$dirJdk\" \"$jdkPath\"")
+                    val process = Runtime.getRuntime().exec("""cmd.exe /c mklink /j "$dirJdk" "$jdkPath"""")
                     val exitValue = process.waitFor()
-                    if (exitValue==0 && dirJdk.exists())
-                        println("Junction successful!")
-                    else
-                        throw IOException("Unable to make JDK locally accessible!\nmklink exit code: $exitValue", e)
+                    if (exitValue==0 && dirJdk.exists()) println("Junction successful!")
+                    else failIO(e) { "Unable to make JDK locally accessible!\nmklink exit code: $exitValue" }
                 } else {
-                    throw IOException("Unable to make JDK locally accessible!", e)
+                    failIO(e) { "Unable to make JDK locally accessible!" }
                 }
             }
         }
     }
 
     val kotlinc by creating(Download::class) {
-        val dirKotlinc = dirWorking.resolve("kotlinc")
-        val fileKotlinVersion = dirKotlinc.resolve("build.txt")
+        val dirKotlinc = dirWorking/"kotlinc"
+        val fileKotlinVersion = dirKotlinc/"build.txt"
         val nameKotlinc = "kotlin-compiler-$kotlinVersion.zip"
-        val fileKotlinc = dirKotlinc.resolve("bin/kotlinc")
-        val zipKotlinc = dirKotlinc.resolve(nameKotlinc)
+        val fileKotlinc = dirKotlinc/"bin"/"kotlinc"
+        val zipKotlinc = dirKotlinc/nameKotlinc
         group = "build setup"
         description = "Downloads the kotlin compiler into $dirKotlinc"
         onlyIf { !fileKotlinVersion.exists() || !fileKotlinVersion.readText().startsWith(kotlinVersion) }
@@ -229,7 +235,7 @@ tasks {
         group = main
         description = "Cleans up temporary files"
         delete(
-                dirWorking.resolve("user/tmp"),
+                dirWorking/"user"/"tmp",
                 buildDir,
                 dirWorking.resolve("widgets").walkBottomUp().filter { it.path.endsWith("class") }.toList()
         )
@@ -266,10 +272,18 @@ application {
             "--add-opens", "java.desktop/java.awt.font=ALL-UNNAMED",
             "--add-opens", "javafx.controls/javafx.scene.control=ALL-UNNAMED",
             "--add-opens", "javafx.controls/javafx.scene.control.skin=ALL-UNNAMED",
-            "--add-opens", "javafx.graphics/com.sun.glass.ui=ALL-UNNAMED",
-            "--add-opens", "javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED",
-            "--add-opens", "javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED",
             "--add-opens", "javafx.graphics/javafx.scene.image=ALL-UNNAMED",
             "--add-opens", "javafx.web/com.sun.webkit=ALL-UNNAMED"
     )
 }
+
+
+operator fun File.div(childName: String) = this.resolve(childName)
+
+val String.sysProp: String get() = System.getProperty(this)
+
+infix fun String.requires(block: () -> Unit) = block()
+
+fun failIO(cause: Throwable? = null, message: () -> String): Nothing  = throw IOException(message(), cause)
+
+fun Boolean.orFailIO(message: () -> String) = also { if (!this) failIO(null, message) }
